0029791: Visualization - Wrong result of SelectMgr_RectangularFrustum::IsClipped

SelectMgr_RectangularFrustum::computeClippingRange() fix skipping depth range starting behind the ray.